# jwst-inspect

./: .dockerignore  .gitattributes  .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
assets/: source_manifest.csv
compute/: cost_log.csv  gpu_run_registry.csv  storage_sync_plan.md  vast_instance_checklist.md  vast_template_notes.md  week6_scene_beta_sync_plan.md
configs/: nvidia_stack.yaml
containers/: README.md
contracts/: changelog.md  dataset_schema.yaml  episode_schema.yaml  metrics_schema.yaml  scene_contract.yaml
docs/: benchmark_card.md  benchmark_card_data_perception_section.md  benchmark_card_policy_r2p_section.md  benchmark_card_scene_section.md  data_card.md  defense_scene_talking_points.md  experiment_log.md  final_closeout_audit.md  paper_data_perception_section.md  paper_scene_section.md  paper_workstream3_evaluation.md  scene_clean_checkout_rehearsal.md  slurm_oci_validation.md  stack_lock.md  student_container_quickstart.md  v2_completion_report.md  v4_visual_recovery_report.md  workstream1_handoff.md  workstream1_week10_execution.md  workstream1_week11_execution.md  workstream1_week12_execution.md  workstream1_week1_execution.md  workstream1_week2_execution.md  workstream1_week3_execution.md  workstream1_week4_execution.md  workstream1_week5_execution.md  workstream1_week6_execution.md  workstream1_week7_execution.md  workstream1_week8_execution.md  workstream1_week9_execution.md  workstream2_synthetic_data_validity_faq.md  workstream2_week10_execution.md  workstream2_week11_execution.md  (+25 more)
runs/: README.md
(+662 files in other folders)
