[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jwst-inspect"
version = "0.1.0"
description = "OpenUSD benchmark scaffold for autonomous JWST inspection."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
sim = []

[project.scripts]
jwst-runtime-info = "jwst_inspect.smoke:runtime_info_main"
jwst-usd-smoke = "jwst_inspect.smoke:usd_smoke_main"
jwst-replicator-smoke = "jwst_inspect.smoke:replicator_smoke_main"
jwst-isaaclab-smoke = "jwst_inspect.smoke:isaaclab_smoke_main"
jwst-r2p-smoke = "jwst_inspect.smoke:r2p_smoke_main"
jwst-artifact-validate = "jwst_inspect.smoke:artifact_validate_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
